Face Recognition finished

--- a/4.CNN/week4/Face Recognition/Face Recognition for the Happy House - v3.ipynb
+++ b/4.CNN/week4/Face Recognition/Face Recognition for the Happy House - v3.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -125,11 +125,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Params: 3743280\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Total Params:\", FRmodel.count_params())"
    ]
@@ -220,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -247,13 +253,13 @@
     "    \n",
     "    ### START CODE HERE ### (≈ 4 lines)\n",
     "    # Step 1: Compute the (encoding) distance between the anchor and the positive, you will need to sum over axis=-1\n",
-    "    pos_dist = None\n",
+    "    pos_dist = tf.reduce_sum(tf.square(tf.subtract(anchor, positive)),axis = -1)\n",
     "    # Step 2: Compute the (encoding) distance between the anchor and the negative, you will need to sum over axis=-1\n",
-    "    neg_dist = None\n",
+    "    neg_dist = tf.reduce_sum(tf.square(tf.subtract(anchor, negative)),axis = -1)\n",
     "    # Step 3: subtract the two previous distances and add alpha.\n",
-    "    basic_loss = None\n",
+    "    basic_loss = tf.add(tf.subtract(pos_dist, neg_dist), alpha)\n",
     "    # Step 4: Take the maximum of basic_loss and 0.0. Sum over the training examples.\n",
-    "    loss = None\n",
+    "    loss = tf.reduce_sum(tf.maximum(basic_loss, 0.0))\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return loss"
@@ -261,11 +267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss = 528.143\n"
+     ]
+    }
+   ],
    "source": [
     "with tf.Session() as test:\n",
     "    tf.set_random_seed(1)\n",
@@ -308,10 +320,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "FRmodel.compile(optimizer = 'adam', loss = triplet_loss, metrics = ['accuracy'])\n",
@@ -362,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -399,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -425,18 +435,18 @@
     "    ### START CODE HERE ###\n",
     "    \n",
     "    # Step 1: Compute the encoding for the image. Use img_to_encoding() see example above. (≈ 1 line)\n",
-    "    encoding = None\n",
+    "    encoding = img_to_encoding(image_path,model)\n",
     "    \n",
     "    # Step 2: Compute distance with identity's image (≈ 1 line)\n",
-    "    dist = None\n",
+    "    dist = np.linalg.norm(encoding - database[identity])\n",
     "    \n",
     "    # Step 3: Open the door if dist < 0.7, else don't open (≈ 3 lines)\n",
-    "    if None:\n",
+    "    if dist < 0.7:\n",
     "        print(\"It's \" + str(identity) + \", welcome home!\")\n",
-    "        door_open = None\n",
+    "        door_open = True\n",
     "    else:\n",
     "        print(\"It's not \" + str(identity) + \", please go away\")\n",
-    "        door_open = None\n",
+    "        door_open = False\n",
     "        \n",
     "    ### END CODE HERE ###\n",
     "        \n",
@@ -454,11 +464,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's younes, welcome home!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.65939283, True)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "verify(\"images/camera_0.jpg\", \"younes\", database, FRmodel)"
    ]
@@ -496,11 +522,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's not kian, please go away\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.86224014, False)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "verify(\"images/camera_2.jpg\", \"kian\", database, FRmodel)"
    ]
@@ -547,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -572,23 +614,23 @@
     "    ### START CODE HERE ### \n",
     "    \n",
     "    ## Step 1: Compute the target \"encoding\" for the image. Use img_to_encoding() see example above. ## (≈ 1 line)\n",
-    "    encoding = None\n",
+    "    encoding = img_to_encoding(image_path,model)\n",
     "    \n",
     "    ## Step 2: Find the closest encoding ##\n",
     "    \n",
     "    # Initialize \"min_dist\" to a large value, say 100 (≈1 line)\n",
-    "    min_dist = None\n",
+    "    min_dist = 100\n",
     "    \n",
     "    # Loop over the database dictionary's names and encodings.\n",
-    "    for (name, db_enc) in None:\n",
+    "    for (name, db_enc) in database.items():\n",
     "        \n",
     "        # Compute L2 distance between the target \"encoding\" and the current \"emb\" from the database. (≈ 1 line)\n",
-    "        dist = None\n",
+    "        dist = np.linalg.norm(encoding - db_enc)\n",
     "\n",
     "        # If this distance is less than the min_dist, then set min_dist to dist, and identity to name. (≈ 3 lines)\n",
-    "        if None:\n",
-    "            min_dist = None\n",
-    "            identity = None\n",
+    "        if dist < min_dist:\n",
+    "            min_dist = dist\n",
+    "            identity = name\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -609,12 +651,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "it's younes, the distance is 0.659393\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.65939283, 'younes')"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "who_is_it(\"images/camera_0.jpg\", database, FRmodel)"
    ]
